@@ -4,9 +4,13 @@ advscan \(hy History For AdvanceSCAN
 .SH ADVANCESCAN VERSION 1.16 2012/11 
 .PD 0
 .IP \(bu
-Added support for CHD file version 4 and 5.
+Added support for CHD versions 4 and 5.
 .IP \(bu
-Removed zlib.dll. It\(cqs no more required.
+Fixed the printout of the CHD hash.
+.IP \(bu
+Fixed samples extension handling.
+.IP \(bu
+Removed zlib.dll from the Windows distribution. It\(cqs no more required.
 .PD
 .SH ADVANCESCAN VERSION 1.15 2012/11 
 .PD 0
