@@ -9,10 +9,16 @@ AdvanceSCAN Version 1.16 2012/11
 </h2>
 <ul>
 <li>
-Added support for CHD file version 4 and 5.
+Added support for CHD versions 4 and 5.
 </li>
 <li>
-Removed zlib.dll. It's no more required.
+Fixed the printout of the CHD hash.
+</li>
+<li>
+Fixed samples extension handling.
+</li>
+<li>
+Removed zlib.dll from the Windows distribution. It's no more required.
 </li>
 </ul>
 <h2> 
