@@ -2,7 +2,7 @@ Name
 	advscan - AdvanceSCAN Roms Manager
 
 	AdvanceSCAN is a command line rom manager for MAME, MESS,
-	xmame, AdvanceMAME, AdvanceMESS and Raine.
+	AdvanceMAME, AdvanceMESS and Raine.
 
 	It runs in Linux, Mac OS X, DOS, Windows and in all the other
 	Unix like platforms.
