@@ -6,7 +6,7 @@
 <center><h2>AdvanceSCAN Roms Manager</h2></center>
 <p>
 AdvanceSCAN is a command line rom manager for MAME, MESS,
-xmame, AdvanceMAME, AdvanceMESS and Raine.
+AdvanceMAME, AdvanceMESS and Raine.
 <p>
 It runs in Linux, Mac OS X, DOS, Windows and in all the other
 Unix like platforms.
